# CLT-experiments

./: .gitignore  README.md  REPORT.md  inspect_attn.py  main.py  pyproject.toml  run_all.py
experiments/: __init__.py  exp1_weight_analysis.py  exp2_ablation.py  exp3_feature_analysis.py  exp4_distance_analysis.py  exp5_timetravel.py  exp6_shortcut.py  exp7_full_targeting_scan.py  exp7_targeting.py  exp7b_full_attn_scan.py  exp7c_full_mlp_scan.py  exp8_gradient.py  exp9_transcoder_comparison.py  utils.py
figures/: exp1_results.txt  exp2_results.txt  exp3_results.txt  exp4_results.txt  exp5_results.txt  exp6_results.txt  exp7_results.txt  exp7b_results.txt  exp7c_results.txt  exp8_results.txt  exp9_results.txt
