[project]
name = "clt-experiments"
version = "0.1.0"
description = "Cross-layer transcoder analysis experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface-hub",
    "einops",
    "matplotlib",
    "seaborn",
    "pandas",
    "numpy",
    "huggingface>=0.0.1",
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
]
